--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,58 @@
-fastapi
-uvicorn
-gspread
-gspread-dataframe
-google-auth
-pandas
-jinja2
-python-multipart
-openpyxl
-
+annotated-types==0.7.0
+anyio==4.10.0
+bcrypt==4.0.1
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+et_xmlfile==2.0.0
+fastapi==0.115.0
+google-api-core==2.26.0
+google-api-python-client==2.151.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.70.0
+gspread==6.1.4
+gspread-dataframe==4.0.0
+h11==0.16.0
+httplib2==0.31.0
+httptools==0.7.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+numpy==2.3.3
+oauthlib==3.3.1
+openpyxl==3.1.5
+pandas==2.2.3
+passlib==1.7.4
+proto-plus==1.26.1
+protobuf==6.33.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.9
+pydantic_core==2.33.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.12
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+starlette==0.38.6
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.30.6
+watchfiles==1.1.1
+websockets==15.0.1
+wheel==0.45.1
